# future

./: .gitignore  README.md  pyproject.toml
data/archives/: reuters_sample.jsonl
docs/project-concept/: README.md  principles.md
src/future_news_forecaster/: cli.py  generation.py  gui.py  models.py  pipeline.py  retrieval.py  scoring.py  settings.py  text.py
src/future_news_forecaster/collectors/: __init__.py  base.py  census.py  ons.py  sample.py
tests/: test_docs_present.py  test_offline_smoke.py  test_settings.py
